--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@
   --card-foreground: hsl(222.2 84% 4.9%);
   --popover: hsl(0 0% 100%);
   --popover-foreground: hsl(222.2 84% 4.9%);
-  --primary: hsl(160, 84%, 39%);
+  --primary: hsl(216, 100%, 29%);
+  /* --primary: hsl(160, 84%, 39%); */
   --primary-foreground: hsl(210 40% 98%);
   --secondary: hsl(210 40% 96.1%);
   --secondary-foreground: hsl(222.2 47.4% 11.2%);
@@ -56,11 +57,12 @@
 
   --dark-2: hsla(214, 12%, 38%);
 
-  --primary-200: hsla(160, 84%, 85%);
-  --primary-400: hsla(160, 84%, 70%);
-  --primary-600: hsla(160, 84%, 55%);
-  --primary-900: hsla(160, 85%, 25%);
-  --primary-1000: hsla(160, 83%, 19%);
+  --primary-100: hsla(216, 100%, 95%);
+  --primary-200: hsla(216, 100%, 85%);
+  --primary-400: hsla(216, 100%, 39%);
+  --primary-600: hsla(216, 100%, 29%);
+  --primary-900: hsl(216, 100%, 29%);
+  --primary-1000: hsla(216, 100%, 19%);
 
   --base-black: hsla(120, 5%, 4%);
   --base-white: hsla(0, 0%, 98%);
@@ -147,6 +149,7 @@
 
   --color-dark-2: var(--dark-2);
 
+  --color-primary-100: var(--primary-100);
   --color-primary-200: var(--primary-200);
   --color-primary-300: var(--primary-300);
   --color-primary-400: var(--primary-400);
