--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
 
 @plugin "tailwindcss-animate";
@@ -61,7 +61,7 @@
   --primary-200: hsla(216, 100%, 85%);
   --primary-400: hsla(216, 100%, 39%);
   --primary-600: hsla(216, 100%, 29%);
-  --primary-900: hsl(216, 100%, 29%);
+  --primary-900: hsla(216, 100%, 29%);
   --primary-1000: hsla(216, 100%, 19%);
 
   --base-black: hsla(120, 5%, 4%);
@@ -164,6 +164,7 @@
   --color-secondary-600: var(--secondary-600);
   --color-secondary-800: var(--secondary-800);
 
+  --font-nunito: Nunito, ui-sans-serif, system-ui, sans-serif;
   --font-sans: Inter, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-poppins: Poppins, ui-sans-serif, system-ui, sans-serif,
