--- a/src/index.css
+++ b/src/index.css
@@ -283,6 +283,12 @@
     animate-background 5s infinite alternate linear;
 }
 
+input[type="time"]::-webkit-datetime-edit-hour-field:focus,
+input[type="time"]::-webkit-datetime-edit-minute-field:focus,
+input[type="time"]::-webkit-datetime-edit-second-field:focus {
+  background-color: #c2e4ba !important; /* Example color */
+}
+
 @keyframes animate-background {
   0% {
     background-position: 0 50%;
